# ollama_apps

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint-and-test.yml
docs/: src_manual.md
src/ollama_apps/: app.py  core.py  document_processor.py  ollama_api_handler.py  run_web_app.py  utils.py  web_app.py
src/ollama_apps/ui/: chat_with_document.py  chat_with_model.py  main_interface.py
